# scientific-pdf-analysis

./: CITATION.cff  Dockerfile  README.md  docker-compose.yml  pyproject.toml
output/: links.txt
src/trabajo1/: analysis.py  grobid_client.py  main.py  plots.py
tests/: test_figures.py  test_plots.py
